Security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
    policyTypes:
    - Ingress
    ingress:
    - from:
      - podSelector:  #First rule to enable ingress from backend api-pod
          matchLabels:
            name: api-pod
      namespaceSelector:
        matchLabels:
          name: prod
      - ipBlock:  #2nd rule to enable ingress from a backup server
          cidr: 192.168.5.10/32
      ports:
      - protocol: TCP
        port: 3306
    egress:
    - to:
      - ipBlock:
          cidr: 192.168.5.10/32
      ports:
      - protocol: TCP
        port: 80
