Security/pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: payroll
    policyTypes:
    - Egress
    - Ingress
    ingress:
      - {}
    egress:
    - to:
      - podSelector:
          matchLabels:
            role: payroll
      ports:
      - protocol: TCP
        port: 8080

    - to:
      - podSelector:
          matchLabels:
            role: mysql
      ports:
      - protocol: TCP
        port: 3306

    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
